FIX: Horizontal overflow bug -> header class="row" removed

--- a/public/less/site.less
+++ b/public/less/site.less
@@ -38,6 +38,9 @@ body {
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: @my-content-bg-color;
+    
+    margin: auto;
+
 }
 
 /* Default template styles
